--- a/multipleimagepicker/src/main/res/layout/activity_hindsites_custom_gallery.xml
+++ b/multipleimagepicker/src/main/res/layout/activity_hindsites_custom_gallery.xml
@@ -23,6 +23,12 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <include
+        android:id="@+id/tool_bar"
+        layout="@layout/toolbar_default"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/image_grid"
         android:layout_width="match_parent"
