--- a/multipleimagepicker/src/main/res/layout/activity_multiple_image_picker.xml
+++ b/multipleimagepicker/src/main/res/layout/activity_multiple_image_picker.xml
@@ -23,11 +23,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <!--<include-->
-        <!--android:id="@+id/tool_bar"-->
-        <!--layout="@layout/toolbar_default"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content" />-->
+    <include
+        android:id="@+id/tool_bar"
+        layout="@layout/toolbar_default"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/image_grid"
