--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,7 @@
 
     <Button
         android:id="@+id/openGallery"
+        android:layout_below="@+id/tool_bar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Open Gallery"/>
